# dataset-merger

./: CLAUDE.md  README.md  config.py  kappa.py  matching.py  merge.py  pyproject.toml  voting.py
src/: config.py  io.py  merge.py  voting.py
tests/: test_kappa.py  test_matching.py  test_voting.py
tests/fixtures/: annotator_a.csv  annotator_b.csv  annotator_c.csv
